Closes #90 nomenclature obligatoire lors de la modification d'un item de commande

--- a/templates/order/orderitem_detail.html
+++ b/templates/order/orderitem_detail.html
@@ -33,10 +33,11 @@
 	</fieldset>
 </form>
 
-<div id="sendChanges" class="dialog" title="Modification de prix">
-	Vous apportez une modification au prix d'un ou plusieurs produits.
-	Cette modification va devenir permanente dans la base de données.
-	S'il s'agît d'une remise ponctuelle, merci d'utiliser le bouton "Remise".
+<div id="sendChanges" class="dialog" title="Modification d'un produit">
+    Vous apportez une (ou plusieurs) modification(s) à un produit de la base de données.
+    Cette modification va devenir permanente. S'il s'agît d'une modification d'une validité ponctuelle,
+    notamment sur le Prix (promotion, remise exceptionnelle, avoir, ...), merci d'ajouter une ligne annexe
+    à votre commande à l'aide du bouton "Remise"
 </div>
 
 {% endblock %}
