--- a/templates/base_main.html
+++ b/templates/base_main.html
@@ -6,7 +6,7 @@
   {% if messages %}
     <ul class="messages">
       {% for message in messages %}
-        <li class="{{ message.tags }}">{{ message|escape|safe }}</li>
+        <li class="{{ message.tags }}">{{ message|linebreaksbr|escape|safe }}</li>
       {% endfor %}
     </ul>
   {% endif %}
