--- a/templates/block_messages.html
+++ b/templates/block_messages.html
@@ -2,7 +2,7 @@
   <ul class="messages">
     {% for message in messages %}
       <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-        {{ message|escape|safe }}
+        {{ message|linebreaksbr }}
       </li>
     {% endfor %}
   </ul>
