working on datepicker

--- a/templates/order/_dialogs.html
+++ b/templates/order/_dialogs.html
@@ -20,7 +20,7 @@
 <div id="setDeliveryDate" class="dialog" title="Date de livraison">
 	<label>Date de livraison (jj/mm/aaaa):</label>
 	{% if order.date_created %}
-		<input type="text" name="delivery_date" class="datepicker minDate" min-date="{{order.date_created|date}}"/>
+		<input type="text" name="delivery_date" class="datepicker minDate" min-date="{{order.date_created|date:'d/m/Y'}}"/>
 	{% else %}
 		<input type="text" name="delivery_date" class="datepicker" />
 	{% endif %}
